2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-private.h:
	* src/totem.c: (seek_slider_pressed_cb), (seek_slider_released_cb),
	(totem_action_handle_key_release), (totem_action_handle_key_press):
	  When seeking while playing, go straight back into playing mode after
	  the seek (ie. do full audio scrubbing as well). (Closes: #363699)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/.cvsignore:
	  Add totem-video-indexer.

2006-10-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Jerry Tan <jerry.tan@sun.com>
	to add support for Wave and Au files (Closes: #365216)

2006-10-25  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	
	If we still don't have a supported mime-type when we get a new stream,
	try getting the mime-type from the URL minus the possible script arguments,
	helps getting the mime-type from broken IIS web servers.

	Don't request a new stream if the SRC is given, and is the same URL as
	our filename/url/qtsrc parameter

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_is_asx),
	(totem_pl_parser_is_asf), (totem_pl_parser_can_parse_from_data):
	Add more debug to totem_pl_parser_can_parse_from_data's dual-types
	detection, and fix ASX playlist detection from data

	(Closes: #365025)

2006-10-25  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_metadata_string):
	  Make extra sure we only return valid UTF-8 strings as metadata,
	  since g_markup_escape_text() tends to just crash if the input is
	  not valid UTF-8 (see #360552).

2006-10-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-mozilla-viewer.c: (totem_embedded_set_state):
	use the ltr or rtl variants of the play button, the original
	doesn't actually exist (Closes: #364832)

2006-10-24  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemGMPPlugin.cpp: Patch from Filip Palm